# mirror-notes

./: CMakeLists.txt  Makefile  README.md  run.sh
docs/: audioAnalyzer.md
src/: AudioAnalyzer.cpp  AudioAnalyzer.h  ParticleSystem.cpp  ParticleSystem.h  VisualMapper.cpp  VisualMapper.h  main.cpp  ofApp.cpp  ofApp.h
